k8s/api-gateway.yaml
# Gateway configuration for Kubernetes cluster
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: appgw-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "cloudbasics.info"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret
---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
spec:
  parentRefs:
    - name: appgw-gateway
      sectionName: https
  hostnames:
    - "cloudbasics.info"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api 
      backendRefs:
        - name: backend-svc
          port: 8000

    - matches:
        - path:
            type: PathPrefix
            value: / 
      backendRefs:
        - name: frontend-svc
          port: 80
